objects/Project_Details__c.object
<CustomObject>
    <description>it is project details object to store details of project</description>
    <fields>
        <fullName>Client__c</fullName>
        <description>here is reference to client</description>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Project</relationshipLabel>
        <relationshipName>Project</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>here is deadline for project</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <description>here is picklist for clients to select the given implementation type</description>
        <label>Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>here is reference of Manager  to employee object</description>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Role__r.Role__c</field>
                <operation>equals</operation>
                <value>&quot;Project  Manager&quot;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Project</relationshipLabel>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>here is project code of client</description>
        <displayFormat>PRJ-{0000}</displayFormat>
        <label>Project Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <description>here description of project for client</description>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>here is starting date of project</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>here is status for project work</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Details  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>